--- a/dashboard-ui/package.json
+++ b/dashboard-ui/package.json
@@ -1,9 +1,10 @@
 {
-	"name": "dashboard-ui",
+	"name": "node-ui",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build:only": "vite build",
+		"build": "vite build && mkdir -p ../master-server/www_static && rm -r ../master-server/www_static && cp -r ./build/ ../master-server/www_static",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
@@ -12,6 +13,7 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
@@ -20,5 +22,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"sass": "^1.70.0"
+	}
 }
