feat: great success.

--- a/master-server/.env.example
+++ b/master-server/.env.example
@@ -1,2 +1,2 @@
 # Local dev db connection URI
-DATABASE_CONNECTION_URI=postgres://postgres:DQhHLe4Z!p45FZYgTyXk@localhost:5432/postgres
+DATABASE_URI=postgres://postgres:DQhHLe4Z!p45FZYgTyXk@localhost:5432/postgres
