API interface for nodes

--- a/master-server/.env.example
+++ b/master-server/.env.example
@@ -1,2 +1,3 @@
 # Local dev db connection URI
-DATABASE_URI=postgres://postgres:DQhHLe4Z!p45FZYgTyXk@localhost:5432/postgres
+DATABASE_URL=postgres://postgres:DQhHLe4Z!p45FZYgTyXk@localhost:5432/postgres
+PASSWORD=abc123
