--- a/node-ui/package.json
+++ b/node-ui/package.json
@@ -11,6 +11,7 @@
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
+		"@fontsource/fira-sans": "^5.0.18",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-static": "^3.0.1",
