--- a/master-server/Cargo.toml
+++ b/master-server/Cargo.toml
@@ -32,6 +32,7 @@ axum = "0.7.4"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 log = "0.4.20"
+tower-http = { version = "0.5.2", features = ["cors"] }
 
 
 [features]
