feat: readd docs

--- a/master-server/open-api.yaml
+++ b/master-server/open-api.yaml
@@ -15,7 +15,7 @@ tags:
     description: Routes acting on all participants
 
 paths:
-  /login:
+  /api/login:
     get:
       description: Check the password
       tags: 
