--- a/master-server/Cargo.toml
+++ b/master-server/Cargo.toml
@@ -27,12 +27,13 @@ once_cell = "1.19.0"
 dotenv = "0.15.0"
 rand = "0.8.5"
 chrono = "0.4.34"
-utoipa-redoc = "3.0.0"
+utoipa-redoc = { version = "3.0.0", features = ["axum"] }
 axum = "0.7.4"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 log = "0.4.20"
 tower-http = { version = "0.5.2", features = ["cors"] }
+axum-macros = "0.4.1"
 
 
 [features]
