--- a/master-server/Cargo.toml
+++ b/master-server/Cargo.toml
@@ -28,7 +28,7 @@ dotenv = "0.15.0"
 rand = "0.8.5"
 chrono = "0.4.34"
 utoipa-redoc = { version = "3.0.0", features = ["axum"] }
-axum = "0.7.4"
+axum = { version = "0.7.4", features = ["ws"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 log = "0.4.20"
