Start of GPIO queue

--- a/node-server/.env.example
+++ b/node-server/.env.example
@@ -2,3 +2,5 @@
 MASER_SERVER_URL=http://localhost:8080
 NODE_TYPE=tape_dispenser
 # NODE_TYPE=card_register
+PASSWORD=abc123
+TAPE_LENGTHS=5,10,15,30
